# sicl

./: .gitignore  CMakeLists.txt  package.json
googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
lib/: greeter.d.ts  greeter.js  index.d.ts  index.js  sicl.d.ts  sicl.js
src/: greeter.ts  greeter.ts~  index.ts  sicl.ts
src/c_bits/: Makefile  main.cpp
src/c_bits/combinator/: .#i_combinator.cpp  combinator.cpp  i_combinator.cpp
src/c_bits/combinator/includes/: combinator.hpp  i_combinator.hpp
src/c_bits/compiler/: main.cpp
src/c_bits/context/: atom.hpp
src/c_bits/includes/combinator/: atom.hpp  comb_term.hpp  combinator.hpp  i_combinator.hpp  number_atom.hpp  term.hpp
src/c_bits/test/: combinator_test.cpp  i_combinator_test.cpp  main.cpp  test_runner
src/c_bits/test/combinator/: combinator_test.cpp  i_combinator_test.cpp  main.cpp
src/ts_bits/: code_generator.ts  index.ts
test/: code-generator-spec.ts  greeter-spec.ts  index-spec.ts  module-spec.ts  sicl-spec.ts
